--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-altgraph==0.17.4
-macholib==1.16.3
-packaging==25.0
-pyinstaller==6.14.2
-pyinstaller-hooks-contrib==2025.5
-pypdf==5.7.0
-setuptools==80.9.0
-
+pdfrw==0.4
+reportlab==4.4.2
 playwright==1.44.0
 python-dotenv==1.0.1
